<resources>
    <string name="app_name">Steal Seekers</string>
    <string name="emailTextView">E-Mail</string>
    <string name="passTextView">Password</string>
    <string name="loginBtn">Log-in</string>
    <string name="registerBtn">Don\'t have an account? Register!</string>
    <string name="orTextView">--------------------          OR          --------------------</string>
    <string name="paste_url_below">Paste URL Below:</string>
    <string name="haven">Haven</string>
    <string name="ssense">SSENSE</string>
    <string name="google">Google</string>
    <string name="try_gucci_loafers">Try \'Gucci Loafers\'</string>
    <string name="enter_query">Enter Query</string>
    <string name="currently_supported_sites_ssense_haven_and_grailed">Currently supported sites: SSENSE, Haven, and Grailed.</string>
    <string name="submit">Submit</string>
</resources>
