<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/rounded_background"
    >

    <TextView
        android:id="@+id/search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_query"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingTop="30dp"
        />

    <EditText
        android:hint="@string/try_gucci_loafers"
        android:layout_below="@+id/search_title"
        android:id="@+id/url_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <LinearLayout android:id="@+id/LinearLayout01"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_below="@id/url_edit">

        <Button
            android:id="@+id/url_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_rounded_corners"
            android:text="@string/ssense"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/haven_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_rounded_corners"
            android:text="@string/haven"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_rounded_corners"
            android:text="@string/google"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>